--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :release_date %><br>
-    <%= f.datetime_select :release_date %>
+    <%= f.date_select :release_date %>
   </div>
   <div class="field">
     <%= f.label :plot %><br>
