--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,13 @@
     <![endif]-->
 </head>
 <body>
+  <% if notice %>
   <p class="notice"><%= notice %></p>
+  <% end %>
+  <% if alert %>
   <p class="alert"><%= alert %></p>
+  <% end %>
+
 <%= yield %>
 
 </body>
