--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MNI</a>
+          <a class="navbar-brand" href="/">MNI</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         <% if current_user %>
