--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
             <div class="form-group">
               <%= f.check_box :remember_me %>
             </div>
-            <%= f.submit "Log in", class: 'btn btn-success' %>
+            <%= f.submit "Log in", class: 'btn btn-primary' %>
           <% end %>
         <% end %>
         </div><!--/.navbar-collapse -->
@@ -69,7 +69,7 @@
     </div>
     <hr>
     <footer>
-      <p>&copy; MNI 2015</p>
+      <p>copyleft MNI 2015</p>
     </footer>
     </div> <!-- /container -->
 
