--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,14 @@
 
 <div class="row">
 
-  <div class="col-md-6">
+  <div class="col-xs-6">
     <h3>Showcase</h3>
     <% @movies.each do |m| %>
       <%= link_to image_tag(m.cover,size: "180x320"), movie_path(m.id) %>
     <% end %>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xs-6">
     <% if current_user %>
       <h3>Top 10 Movies</h3>
       <ul class="list-group">
