--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -88,3 +88,23 @@
       </div>
     </div>
   </div>
+<div class="row">
+  <h3>Comments</h3>
+  <% @movie.comments.each do |comment| %>
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>
+        <%= comment.user.email %>
+        <% if comment.user.user_ratings.where(movie_id:@movie.id).first %>
+          | <%= comment.user.user_ratings.where(movie_id:@movie.id).first.rating %>
+        <% end %>
+        </h4>
+      </div>
+      <div class="panel-body">
+        <%= comment.body %>
+      </div>
+      </div>
+    </div>
+  <% end %>
+</div>
