New Movie page completed. Movie comments added to movie view.

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -107,4 +107,19 @@
       </div>
     </div>
   <% end %>
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>
+        Yorum Yap
+        </h4>
+      </div>
+      <div class="panel-body">
+        <%= form_for(@movie.comment) do |f| %>
+          <%= f.label :body %><br>
+          <%= f.text_field :body %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
