comment creation fixed.

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -90,7 +90,7 @@
   </div>
 <div class="row">
   <h3>Comments</h3>
-  <% @movie.comments.each do |comment| %>
+  <% @comments.each do |comment| %>
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -103,6 +103,9 @@
       </div>
       <div class="panel-body">
         <%= comment.body %>
+        <% if comment.user == current_user %>
+          <%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
       </div>
       </div>
     </div>
@@ -115,10 +118,7 @@
         </h4>
       </div>
       <div class="panel-body">
-        <%= form_for(@movie.comment) do |f| %>
-          <%= f.label :body %><br>
-          <%= f.text_field :body %>
-        <% end %>
+      <%= render 'comments/form' %>
       </div>
     </div>
   </div>
