--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,28 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Genres</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-        <td><%= genre.name %></td>
-        <td><%= link_to 'Show', genre %></td>
-        <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
-        <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Genre', new_genre_path %>
-<%= link_to 'Back', root_path %>
+<h3>Genres</h3>
+<div class="row">
+  <% @genres.each_with_index do |genre,index| %>
+    <div class="col-xs-4">
+      <button class="btn-default" type="button">
+        <p><h2> <%=link_to genre.name, genre_path(genre) %> </h2></p>
+    </button></div>
+  <% end %>
+</div>
