--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
 
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <%= image_tag(@movie.cover, size: "300x430", id: "cover") %>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-xs-8">
     <h1><%= @movie.title %>&nbsp;<small><%= @movie.release_date.year %></small></h1>
     <h4>
     <% @movie.genres.each do |genre| %>
@@ -35,13 +35,13 @@
     <% end %>
     <br>
     <br>
-    <br>
     <p> <%= @movie.plot %> </p>
   </div>
 </div>
 <hr>
 <div class="row">
-  <div class="col-md-4">
+  <h3>Cast</h3>
+  <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading"><h4> Directors: </h4></div>
       <div class="panel-body">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading"><h4> Producer: </h4></div>
       <div class="panel-body">
@@ -77,7 +77,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading"><h4> Actors: </h4></div>
       <div class="panel-body">
@@ -91,7 +91,7 @@
 <div class="row">
   <h3>Comments</h3>
   <% @movie.comments.each do |comment| %>
-  <div class="col-md-12">
+  <div class="col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4>
@@ -107,7 +107,7 @@
       </div>
     </div>
   <% end %>
-  <div class="col-md-12">
+  <div class="col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4>
@@ -115,10 +115,6 @@
         </h4>
       </div>
       <div class="panel-body">
-        <%= form_for(@movie.comment) do |f| %>
-          <%= f.label :body %><br>
-          <%= f.text_field :body %>
-        <% end %>
       </div>
     </div>
   </div>
