movie comments bug fixed

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -90,7 +90,7 @@
   </div>
 <div class="row">
   <h3>Comments</h3>
-  <% @movie.comments.each do |comment| %>
+  <% @comments.each do |comment| %>
   <div class="col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
