--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p>Whishlist</p>
+          <p>Watch List</p>
         </div>
       </div>
       <hr>
