--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @profile.email %></h1>
 <h2>Watch List</h2>
 <% @profile.watch_lists.each_with_index do |watchlist, i| %>
-<p><%= i+1 %>. <%= link_to watchlist.movie.title, movie_path(watchlist.movie) %></p>
+<p><%= i+1 %>. <%= link_to watchlist.movie.title, movie_path(watchlist.movie) %>
+<small>
+<% if current_user == @profile %>
+<%= link_to 'Remove', movie_destroy_watchlist_path(watchlist.movie.id), method: :delete %>
+<% end %>
+</small>
+</p>
 <% end %>
