--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,6 +17,6 @@
   <%= f.hidden_field :user_id %>
   <%= f.hidden_field :movie_id %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Comment', class: 'btn btn-default' %>
   </div>
 <% end %>
