--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -7,6 +7,11 @@ $(document).ready(function(){
 })
 </script>
 <style>
+  .select2-multiple {
+    width: 100%;
+  }
+</style>
+<style>
   #movie_actors {
     width: 200px;
   }
@@ -27,19 +32,19 @@ $(document).ready(function(){
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :release_date %><br>
-    <%= f.date_select :release_date, :start_year=>1800, :end_year=>Time.now.year + 5 %>
+    <%= f.date_select :release_date, :start_year=>1800, :end_year=>Time.now.year + 5, class: 'form-control'  %>
   </div>
   <div class="field">
     <%= f.label :plot %><br>
-    <%= f.text_area :plot %>
+    <%= f.text_area :plot, class: 'form-control'  %>
   </div>
   <div class="field">
     <%= f.label :cover %><br>
-    <%= f.text_field :cover %>
+    <%= f.text_field :cover, class: 'form-control'  %>
   </div>
   <div class="field">
     <%= f.label :genres %> <br>
