--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -13,13 +13,13 @@
 
   <div class="field">
     <%= f.label :full_name %><br>
-    <%= f.text_field :full_name %>
+    <%= f.text_field :full_name, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :photo %><br>
-    <%= f.text_field :photo %>
+    <%= f.text_field :photo, class: 'form-control'  %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Save Person', class: 'btn btn-default'  %>
   </div>
 <% end %>
